[UPDATE] New modules
Created item module, for all the items in the game; updated new game states; cleaned up code; updated losing condition; updated UI;

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 /Assets/Plugins/Photon/PhotonUnityNetworking/Demos
 /Assets/Plugins/Photon/PhotonChat/Demos
 /Assets/Plugins/Photon/PhotonRealtime/Demos
+WindowsBuild/
